# ishell

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEV_GUIDE_v0.2.0.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  PROGRESS.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICKSTART.md.v0.1.0.backup  README.md  README.md.v0.1.0.backup  RELEASE_NOTES_v0.3.0.md  TESTING.md  TEST_REPORT.md  TEST_REPORT_v0.3.0.md  run.sh
docs/: PERFORMANCE_REPORT.md
docs/agent/: architecture.md  development_commands.md
docs/plans/: 2026-02-02-complete-v0.2.0.md  2026-02-02-v0.3.0-plan.md  phase1_progress.md  v1.0.0_getting_started.md  v1.0.0_roadmap.md  v1.0.0_technical_design.md
src/: ai.rs  app.rs  config.rs  crypto.rs  history.rs  lib.rs  main.rs  monitor.rs  sftp.rs  ssh.rs  theme.rs  types.rs
src/state/: mod.rs
src/tabs/: manager.rs  mod.rs  tab.rs
src/ui/: file_browser.rs  file_browser_simple.rs  mod.rs  panels.rs  settings_panel.rs  tab_bar.rs
tests/: integration_test.rs
