[package]
name = "ishell"
version = "0.2.0"
edition = "2021"
authors = ["hyx"]
description = "Modern cross-platform SSH terminal with AI assistance"

# 支持库和二进制
[[bin]]
name = "ishell"
path = "src/main.rs"

[lib]
name = "ishell"
path = "src/lib.rs"

[dependencies]
# UI Framework
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
env_logger = "0.11"
chrono = "0.4"

# SSH Support
ssh2 = "0.9"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# AI API Integration
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-openai = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Configuration Persistence
toml = "0.8"
dirs = "5.0"

# Fuzzy search
fuzzy-matcher = "0.3"

# File Dialog
rfd = "0.14"

# Password Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Async runtime
futures = "0.3"

# System info
whoami = "1.5"
sysinfo = "0.30"
